# xla

./: .bant-macros  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .clangd  .gitignore  .pylintrc  .tf_configure.bazelrc  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  STAGING.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-xla  cmd  configure.py  meson.build  opensource_only.files  requirements.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  res.txt  res1.txt  res2.txt  rocm-open-upstream-pr.yml  ruleml_temp.patch  t5_hlo.txt  tensorflow.bazelrc  tsl_workspace0.bzl  tsl_workspace2.bzl  tsl_workspace3.bzl  warnings.bazelrc  workspace0.bzl  workspace1.bzl  workspace2.bzl  (+2 more)
-/: module_0001.jit_f.priority_fusion_dump.txt
.github/: CODEOWNERS  actionlint.yml  pull.yml
.github/workflows/: add_assignees.py  add_assignees.yml  assignees.py  assignees.yml  autorun_ci.py  autorun_ci.yml  bap_benchmarks_test.yml  bazel_dependency_violations.yml  bazel_query.yml  bazel_tags.yml  benchmark.yml  benchmark_postsubmit.yml  benchmark_presubmit.yml  benchmarks.yml  build_run_hlo_module.yml  check_contents.yml  ci.yml  ci_multi_device.yml  clang_format.yml  clang_tidy.yml  cpu_benchmarks.yml  cpu_benchmarks_nightly.yml  dwyu.yml  generate_benchmark_matrix.yml  github_api.py  gpu_benchmarks.yml  gpu_benchmarks_nightly.yml  nightly_benchmarks.yml  oneAPI_Postsubmit.yml  postsubmit_benchmark.yml  pr_size_check.py  presubmit_benchmark.yml  rocm-ci.yml  rocm-nightly-upstream-sync.yml  rocm_ci.yml  rocm_jax_ci.yml  rocm_jax_ut.yml  rocm_xla_ci.yml  rollback_notification.py  scorecards-analysis.yml  (+4 more)
.kokoro/jax/: build.sh
.kokoro/linux/: build.sh
.kokoro/macos/: build.sh
.kokoro/pytorch_xla/: build.sh
.kokoro/windows/: windows_build.sh
build_tools/: BUILD  build.py
build_tools/ci/: BUILD  build.py  clang_apply_replacements_wrapper.sh.tpl  clang_tidy_diff.py  clang_tidy_diff_test.py  clang_tidy_wrapper.sh.tpl  golden_commands.txt  parallel_gpu_execute.sh  run_clang_format.sh  run_clang_tidy.sh
build_tools/compile_commands/: BUILD
build_tools/configure/: BUILD  configure.py
build_tools/docker/: docker_run.sh
build_tools/github_actions/: build_xla.sh  docker_run.sh  run_xla.sh  test_script.sh
build_tools/lint/: BUILD  check_contents.py  check_dwyu.py  check_dwyu_test.py  clang_tidy.py  diff_parser.py  generate_compile_commands.py  generate_compile_commands_test.py  tags.py
build_tools/pjrt_wheels/: BUILD.bazel  CHANGELOG.md
build_tools/rocm/: BUILD  asan_ignore_list.txt  execute_ci_build_upstream.sh  lsan_ignore_list.txt  multi_gpu.bazelrc  parallel_gpu_execute.sh  rocm_tag_filters.sh  rocm_xla.bazelrc  rocm_xla_ci.bazelrc  run_jax_ut.sh  run_xla.sh  run_xla_ci_build.sh  run_xla_multi_gpu.sh  tsan_ignore_list.txt
build_tools/sycl/: build_xla.sh  ci_build_xla.sh  ci_docker_test.sh  ci_test_xla.sh  clean.sh  install_bazel.sh  install_oneapi.sh
docs/: _toc.yaml  aliasing.md  architecture.md  async_ops.md  broadcasting.md  build_from_source.md  code_reviews.md  code_reviews_guide.md  command_buffer_va_remapping.md  command_buffer_va_remapping_tutorial.md  containers.md  contribute.md  contributing.md  custom_call.md  determinism.md  developer_environment.md  developer_guide.md  developing_new_backend.md  effort_levels.md  emitters.md  error_codes.md  errors_overview.md  flags_guidance.md  gpu_architecture.md  hermetic_cuda.md  hlo_dumps.md  hlo_passes.md  hlo_to_thunks.md  index.md  indexing.md  lsp.md  oom_debugging.md  operation_semantics.md  passes.md  performance_optimizing_operations.md  persisted_autotuning.md  pjrt_integration.md  shapes.md  symbolic_expressions.md  terminology.md  (+4 more)
docs/errors/: error_0001.md  error_0100.md  error_0101.md  error_0102.md  error_0200.md  error_03xx.md  error_1000.md  error_1001.md  error_1002.md  error_1200.md  error_2001.md  error_2002.md  error_2003.md  error_2xxx.md  error_3000.md  error_3001.md  error_C0432.md
docs/megascale/: overview.md
docs/pjrt/: examples.md  index.md  pjrt_integration.md
platform/linux_x64/: BUILD
tools/: python_bin_path.sh
tools/def_file_filter/: def_file_filter.py.tpl  def_file_filter_configure.bzl  symbols_pybind.txt
tools/toolchains/: BUILD
xla/: BUILD  array.h  array2d.h  array2d_test.cc  array3d.h  array4d.h  autotune_results.proto  autotune_serialize.cc  autotune_serialize.h  autotune_serialize_test.cc  autotuning.proto  bit_cast.h  bit_cast_test.cc  comparison_util.cc  comparison_util.h  comparison_util_test.cc  cpu_function_runtime.h  debug_options_flags.cc  debug_options_flags.h  debug_options_flags_test.cc  debug_options_parsers.h  debug_options_parsers_test.cc  debug_options_test.cc  dense_set.h  device_util.h  ef57.cc  error_spec.h  executable_run_options.cc  executable_run_options.h  execution_options_util.h  fake_header.h  fp_util_test.cc  frontend_attributes.h  future.h  glob_lit_test.bzl  index_util.cc  index_util.h  iterator_util.h  layout.cc  layout.h  (+86 more)
xla/c/: BUILD
xla/client/: BUILD  client.cc  client.h  client_library.cc  client_library.h  compile_only_client.cc  compile_only_client.h  executable_build_options.cc  executable_build_options.h  executable_build_options_test.cc  global_data.cc  global_data.h  local_client.cc  local_client.h  padding.cc  padding.h  padding_test.cc  sharding_builder.cc  sharding_builder.h  value_inference.cc  value_inference.h  xla_builder.cc  xla_builder.h  xla_builder_test.cc  xla_computation.h
xla/codegen/: BUILD  device_spec.h  kernel_spec.h  math_lib.cc  pass_manager_with_logging.cc  pass_manager_with_logging.h
xla/error/: BUILD
xla/extension/: BUILD
xla/ffi/: BUILD  call_frame.cc  execution_state.h  ffi.h  ffi_api.cc  ffi_api.h  ffi_internal_api.cc  ffi_registry.cc  ffi_registry.h  ffi_structs.h  ffi_test.cc  invoke.cc  invoke.h  nccl_collective_resources_api.h  type_registry.cc  type_registry.h
xla/fuzz/: BUILD  hlo_parser_fuzz.cc  hlo_proto_fuzz.cc
xla/mlir_hlo/: .bazelversion  BUILD  README.md  WORKSPACE
xla/mosaic/: BUILD
xla/mydiff/: BUILD  my_diff.cc
xla/pjrt/: BUILD  cpu_buffer_utils.h  (+105 more)
(+6284 files in other folders)
